# gastrulation_actin_cable

PIV/: environment.yml  main_28_all.py
PIV/input_20/: 1.tif  10.tif  11.tif  2.tif  4.tif  5.tif  6.tif  7.tif  8.tif  9.tif
PIV/input_28/: 1.tif  2.tif  3.tif  4.tif  5.tif  6.tif  7.tif  8.tif  9.tif
PIV_actin_cable/: main.py
cell_ablation/: CMakeLists.txt  main.cpp
non_linear_fitting/: .main_velocity_bootstrap_28.py.swp  main_velocity_bootstrap_20.py  main_velocity_bootstrap_28.py
non_linear_fitting/experiment_files/: low_temp2.txt  low_temp3.txt  low_velocity_data.txt  low_velocity_data2.txt  low_velocity_data_all_points.txt  low_velocity_data_all_points_2.txt  low_velocity_data_norm.txt  low_velocity_data_norm2.txt  main.py  normal_temp2.txt  normal_temp3.txt  normal_velocity_data.txt  normal_velocity_data_all_points.txt  normal_velocity_data_norm.txt
non_linear_fitting/simulation_files/: output_hydro_test__1000_param1_0.80_param2_2.25_param3_0.10000_deltat3.txt  output_hydro_test__1001_param1_0.80_param2_2.25_param3_0.20000_deltat3.txt  output_hydro_test__1002_param1_0.80_param2_2.25_param3_0.30000_deltat3.txt  output_hydro_test__1003_param1_0.80_param2_2.25_param3_0.40000_deltat3.txt  (+5319 more)
vertex_model/: Auxvertex_model.cpp  Auxvertex_model.h  CMakeCache.txt  HexagonalGrid.cpp  HexagonalGrid.h  MiscellaneousRoutines.cpp  MiscellaneousRoutines.h  miscellaneous2.h  vertex_model.cpp
yolk_model/: animation.py  bubbles.py  bubbles_new.py  bubbles_simpler.py  bubbles_v2.py  gen_video.py  gen_video_new.py
yolk_model/new/: animation.py  bubbles_new.py  (+1 more)
